Fix overflow on left pane that hid the top items
Closes #435

--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -152,7 +152,7 @@
 }
 
 .breadcrumbNav {
-  line-height: 1.2em;
+  line-height: normal;
   padding-top: 10px;
   word-wrap: break-word;
 }
